Fix formatting and enhance clarity in feedback.md
Correct formatting and improve clarity in feedback document.

--- a/first_chatbot/1.0.0-피드백.md
+++ b/first_chatbot/1.0.0-피드백.md
@@ -15,7 +15,7 @@
 * 관광객 관점 가독성 ↓
 * “보고서형 응답”으로 변질
 
-👉 즉, **관광객용 요약 질문인데, 모델은 학술 검증 보고서를 쓰고 있음**
+ **관광객용 요약 질문인데, 모델은 학술 검증 보고서를 쓰고 있음**
 
 ---
 
@@ -89,7 +89,7 @@ STYLE:
 
 ---
 
-## 4️⃣ 같은 질문의 “이상적인 짧은 답변 예시”
+## 4️ 같은 질문의 “이상적인 짧은 답변 예시”
 
 ### Q. 타지키스탄 여행할 만한 곳은?
 
